style.css
@font-face {
    font-family: 'CustomFont';
    src: url('assets/Antique-Olive-Std-Nord_3868.ttf') format('truetype');
}

:root {
    --landing-page-background-color: black;
    --artworks-background-color: white;
    --text-color: white;
    scroll-behavior: smooth;
}

body {
    background-color: var(--landing-page-background-color);
    color: var(--text-color);
    font-family: CustomFont, sans-serif;
}

header {
    display: flex;
    flex-direction: column;
    align-items: center;
    text-transform: uppercase;
    position: sticky;
    top: 2rem;
    z-index: 1;
    mix-blend-mode: difference;
}

header img {
    width: 5rem;
    margin-bottom: 1rem;
    transition: filter 0.5s;
}

header h1,
header p {
    font-size: 0.8rem;
    transition: color 0.5s;
}

.links {
    position: fixed;
    top: 50%;
    transform: translateY(-50%);
    width: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
}

.links ul {
    display: grid;
    justify-content: center;
    list-style: none;
    grid-template-columns: repeat(2, 1fr);
    padding: 0;
}

.link {
    display: flex;
    flex-direction: column;
    align-items: center;
    text-decoration: none;
}

.link img {
    width: 10rem;
}

.link h2 {
    font-size: 1rem;
    color: var(--text-color);
    text-transform: uppercase;
}

.link--artworks:hover img {
    content: url('assets/artworks.webp');
}

.link--book:hover img {
    content: url('assets/book.webp');
}

.link--noises:hover img {
    content: url('assets/noises.webp');
}

.link--band:hover img {
    content: url('assets/band.webp');
}

.artworks {
    display: grid;
    margin-top: 100vh;
    position: relative;
    gap: 1rem;
    grid-template-columns: 1fr;
    justify-items: center;
    background-color: var(--artworks-background-color);
    padding: 1rem;
}

.artworks ul {
    padding: 0;
    list-style: none;
    display: flex;
    flex-direction: column;
    gap: 1rem;
}

.artworks ul img {
    width: 100%;
}

@media screen and (min-width: 768px) {

    header h1,
    header p {
        font-size: 1rem;
    }

    .links ul {
        grid-template-columns: repeat(4, 1fr);
    }

    .link img {
        width: 15rem;
    }

    .artworks {
        grid-template-columns: repeat(2, 1fr);
    }
}

